NYCUI-507 bus popup on stop with no incoming vehicles looks bad - styled
NYCUI-507 bus popup on stop with no incoming vehicles looks bad - styled

--- a/src/css/bustime.sass
+++ b/src/css/bustime.sass
@@ -1793,6 +1793,10 @@
       display: flex
       flex-direction: column
       gap: .4rem
+      .no-vehicles
+        font-weight: bold 
+        font-size: .875rem
+        text-transform: uppercase
     .map-popup-content
       >div
         padding: .2rem 0 .2rem .35rem
@@ -1859,7 +1863,7 @@
           gap: .3rem
           align-items: top
           margin: 0rem .5rem .5rem .5rem
-          padding: 1rem .25rem .25rem .25rem
+          padding: 1rem 0 .25rem 0
           border-bottom: 1px solid currentColor
           .popup-header-info
             display: flex
@@ -1933,7 +1937,7 @@
           background-color: $white
           z-index: 2
           margin: 0rem .5rem .5rem .5rem
-          padding: 1rem .25rem .25rem .25rem
+          padding: 1rem 0 .25rem 0
           border-bottom: 1px solid currentColor
           .popup-header-info
             display: flex
